[project]
name = "django-peeringdb"
version = "3.5.0"
description = "PeeringDB Django models"
readme = "README.md"
license = { text = "BSD-2-Clause" }
authors = [{ name = "PeeringDB", email = "support@peeringdb.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
]
requires-python = ">=3.9"
dependencies = [
  "django_countries>1",
  "django_handleref>=2",
  "django_inet>=1",
  "asgiref>=3",
  "django>=4.2",
]

[dependency-groups]
dev = [
  # testing
  "codecov>=2",
  "coverage>=5",
  "pytest>=6",
  "pytest-django>=3.8",
  "pytest-cov",
  "tox>=3.24",
  "tox-gh-actions>=3",
  "tox-uv>=1.13.0",

  # linting
  "mypy>=0.950",
  "pre-commit>=2.13",
  "ruff",

  # docs
  "markdown",
  "markdown-include>=0.5,<1",
  "mkdocs>=1.2.3",

  # ctl
  "ctl>=1",
  "jinja2>=2",
  "tmpl>=1",
  "twine>=3.3",
]

[project.urls]
repository = "https://github.com/peeringdb/django-peeringdb"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP", # pyupgrade
]
