[project]
name = "django-peeringdb"
version = "3.6.0"
description = "PeeringDB Django models"
readme = "README.md"
license = { text = "BSD-2-Clause" }
authors = [{ name = "PeeringDB", email = "support@peeringdb.com" }]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Django :: 3.1",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
]
requires-python = ">=3.10"
dependencies = [
  "django_countries>1",
  "django_handleref>=2",
  "django_inet>=1",
  "asgiref>=3",
  "django>=4.2",
]

[dependency-groups]
dev = [
  # testing
  "codecov>=2",
  "coverage>=5",
  "pytest>=6",
  "pytest-django>=3.8",
  "pytest-cov",
  "tox>=3.24",
  "tox-gh-actions>=3",
  "tox-uv>=1.13.0",

  # linting
  "mypy>=0.950",
  "django-stubs[compatible-mypy]",
  "pre-commit>=2.13",
  "ruff",

  # docs
  "markdown",
  "markdown-include>=0.5,<1",
  "mkdocs>=1.2.3",

  # ctl
  "ctl>=1",
  "jinja2>=2",
  "tmpl>=1",
  "twine>=3.3",
]

[project.urls]
repository = "https://github.com/peeringdb/django-peeringdb"

[build-system]
requires = ["hatchling>=1.0.0"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
    "I",  # isort
    "UP", # pyupgrade
]

[tool.mypy]
python_version = "3.10"
plugins = ["mypy_django_plugin.main"]
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
strict = false
ignore_missing_imports = true
disable_error_code = ["attr-defined", "import-not-found", "misc"]

exclude = [
    "tests/",
    "migrations/",
    "build/",
    ".tox/",
]

[[tool.mypy.overrides]]
module = [
    "django_peeringdb.models.abstract",
    "django_peeringdb.models.concrete"
]
ignore_errors = true

[tool.django-stubs]
django_settings_module = "tests.settings"
strict_settings = false

[tool.uv]
dev-dependencies = [
    "django-stubs-ext>=5.2.2",
    "django-stubs[compatible-mypy]>=5.2.2",
    "monkeytype>=23.3.0",
    "pre-commit>=4.2.0",
    "pytest-django>=4.11.1",
    "pytest>=8.4.1",
]

